<resources>
    <string name="app_name">PjaidMobile</string>
    <string name="action_settings">Settings</string>
    <string name="error_description_empty">Opis awarii nie może być pusty.</string>
    <string name="report_sent_success">Zgłoszenie wysłane!</string>
    <string name="unknown_error">Wystąpił nieznany błąd.</string>
    <string name="report_error_prefix">Błąd zgłoszenia: </string>
    <string name="scan_prompt">Zeskanuj kod QR urządzenia</string>
    <string name="scan_cancelled">Skanowanie anulowane</string>
    <string name="device_not_found">Nie znaleziono urządzenia</string>
    <string name="api_error_prefix">Błąd API: </string>
    <string name="unknown_api_error">Wystąpił nieznany błąd API.</string>
    <string name="report_problem">Zgłoś awarię</string>
    <string name="scan_qr">Zeskanuj kod QR</string>
    <string name="device_info">Informacje o urządzeniu</string>
    <string name="describe_error">Opisz awarię</string>
    <string name="report">Zgłoś</string>

    <!-- ekran logowania -->
        <string name="welcome_to_pjaid">Welcome to PJAID</string>
        <string name="username_or_email">Username or email</string>
        <string name="password">Password</string>
        <string name="remember_me">Remember me</string>
        <string name="forgot_password">Forgot password?</string>
        <string name="sign_in">Sign in</string>
        <string name="logo_description">PJAID Logo</string>
        <string name="toggle_password_visibility">Toggle password visibility</string>
</resources>